--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build: .
     environment:
       - PYTHONUNBUFFERED=1
+      - ENDPOINT_URL=http://store-manager-api:5000/stocks/graphql
     volumes:
       - .:/app
     networks:
