--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,8 +35,8 @@ services:
     restart: unless-stopped
     networks:
       - labo03-network
-    ports:
-      - "6379:6379"
+#    ports:
+#      - "6379:6379"
 
 networks:
   labo03-network:
